# microbit-musicbox-rs

./: Cargo.toml  Embed.toml  LICENSE  README.md
.cargo/: config.toml
src/: button.rs  main.rs  melody.rs  mono.rs  music.rs  note.rs  player.rs  tone.rs
src/music/: paser.rs
